tests/paczka1/fuzzy1/84680664.err
Error in line 6: z3U89JYBd9 A537 3,7
Error in line 19: tqw A41 51,7
